🚚remove site-config.toml
Just use the Rocket.toml

- remove configurable title
- pass registration codes instead of links

--- a/www/app.html
+++ b/www/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{SITE_CONFIG_TITLE}}</title>
+  <title>TempFiles</title>
 </head>
 <body>
 <div id="root"></div>
