--- a/www/app.html
+++ b/www/app.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--
+  ~ Copyright 2025 Fred Emmott <fred@fredemmott.com>
+  ~ SPDX-License-Identifier: MIT
+  ~
+  -->
 <head>
   <meta charset="UTF-8">
   <title>TempFiles</title>
